2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	glom_export_po_all: Actually export the translations.

	* glom/glom_export_po_all.cc: Use the available locale_id,
	instead of an unset variable that should not be used.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	export_po_all: Fix some typos.

	* glom/glom_export_po_all.cc: Fix some typos.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_translations: Test more fallbacks.

	* examples/example_film_manager.glom: Remove the useless en_GB translations.
	* tests/test_document_load_translations.cc: Check that similar locales 
  are used if there is no translation.

2012-01-09  Murray Cumming  <murrayc@murrayc.com>

	Added glom_export_po_all command-line too.

	* Makefile_libglom.am:
	* glom/glom_export_po_all.cc: This outputs all .po files to a directory.

2012-01-08  Murray Cumming  <murrayc@murrayc.com>

	test_document_export_po: Use msgfmt -c to test the exported .po file.

	* configure.ac: Get the path for msgfmt.
	* tests/translations_po/test_document_export_po.cc: Use msgfmt -c to
	check the new .po file.

2012-01-08  Murray Cumming  <murrayc@murrayc.com>

	glom_export_po: Let the user choose the locale ID.

	* glom/glom_export_po.cc: Add, and use, a --locale-id (-l) option
	instead of just hard-coding de_DE.

2012-01-08  Murray Cumming  <murrayc@murrayc.com>

	Export to po file: Write a po file header.

	* glom/libglom/translations_po.[h|cc]: write_translations_to_po_file():
	Add an optional locale_name parameter. We cannot discover this inside
	the function because we only use iso-codes in glom, not libglom, and 
	I would prefer not to move that static data into libglom.
	* glom/mode_design/translation/window_translations.cc: 
	on_button_export():Pass the extra locale_name parameter.
	* tests/translations_po/data/test.po: Resave.

	This makes the written .po file pass validation by msgfmt -c on the 
	command line.

2012-01-08  Murray Cumming  <murrayc@murrayc.com>
