@@ -30,6 +30,7 @@
 #include <glibmm/convert.h>
 #include <glibmm/miscutils.h>
 #include <iostream>
+#include <stdexcept>
 
 #include <glibmm/i18n.h>
 
@@ -68,6 +69,28 @@ GlomCreateOptionGroup::GlomCreateOptionGroup()
 
 int main(int argc, char* argv[])
 {
+  bindtextdomain(GETTEXT_PACKAGE, GLOM_LOCALEDIR);
+  bind_textdomain_codeset(GETTEXT_PACKAGE, "UTF-8");
+  textdomain(GETTEXT_PACKAGE);
+
+  // Set the locale for any streams to the user's current locale,
+  // We should not rely on the default locale of
+  // any streams (we should always do an explicit imbue()),
+  // but this is maybe a good default in case we forget.
+  try
+  {
+    std::locale::global(std::locale(""));
+  }
+  catch(const std::runtime_error& ex)
+  {
+    //This has been known to throw an exception at least once:
+    //https://bugzilla.gnome.org/show_bug.cgi?id=619445
+    //This should tell us what the problem is:
+    std::cerr << G_STRFUNC << ": exception from std::locale::global(std::locale(\"\")): " << ex.what() << std::endl;
+    std::cerr << "  This can happen if the locale is not properly installed or configured." << std::endl;
+  }
+  
+
   Glom::libglom_init();
   
   Glib::OptionContext context;
@@ -110,14 +133,14 @@ int main(int argc, char* argv[])
 
   if(input_uri.empty())
   {
-    std::cerr << "Please specify a glom file." << std::endl;
+    std::cerr << _("Please specify a glom file.") << std::endl;
     std::cerr << std::endl << context.get_help() << std::endl;
     return EXIT_FAILURE;
   }
 
   if(group.m_arg_locale_id.empty())
   {
-    std::cerr << "Please specify a locale ID." << std::endl;
+    std::cerr << _("Please specify a locale ID.") << std::endl;
     std::cerr << std::endl << context.get_help() << std::endl;
     return EXIT_FAILURE;
   }
@@ -148,7 +171,7 @@ int main(int argc, char* argv[])
   //Check the output path: 
   if(group.m_arg_filepath_output.empty())
   {
-    std::cerr << "Please specify an output path." << std::endl;
+    std::cerr << _("Please specify an output path.") << std::endl;
     std::cerr << std::endl << context.get_help() << std::endl;
     return EXIT_FAILURE;
   }
@@ -184,11 +207,11 @@ int main(int argc, char* argv[])
     Glom::write_translations_to_po_file(&document, ouput_uri, group.m_arg_locale_id);
   if(!succeeded)
   {
-    std::cerr << "Po file creation failed." << std::endl;
+    std::cerr << _("Po file creation failed.") << std::endl;
     return EXIT_FAILURE;
   }
 
-  std::cout << "Po file created at: " << ouput_uri << std::endl;
+  std::cout << Glib::ustring::compose(_("Po file created at: %1"), ouput_uri) << std::endl;
 
   Glom::libglom_deinit();
 
