@@ -1,5 +1,14 @@
 2012-01-09  Murray Cumming  <murrayc@murrayc.com>
 
+	Command-line utilities: Initialize gettext and the locale.
+
+	* glom/glom_create_from_example.cc:
+	* glom/glom_export_po.cc:
+	* glom/glom_export_po_all.cc:
+	* glom/glom_test_connection.cc: This should make the translations be used.
+
+2012-01-09  Murray Cumming  <murrayc@murrayc.com>
+
 	glom_export_po_all: Actually export the translations.
 
 	* glom/glom_export_po_all.cc: Use the available locale_id,
